# BreathGuideApp

./: .gitignore  BreathPhaseClass.cpp  BreathPhaseClass.h  BreathingGraphItem.cpp  BreathingGraphItem.h  CMakeLists.txt  README.md  breathGuideApp.qrc  main.cpp  utils_qt.h
.cursor/rules/: project-ignore-rules.mdc  qml.mdc  qt.mdc
qml/: BreathSequenceData.qml  BreathingPhaseInfo.qml  main.qml
